finished (not bonus)

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="card h-100 text-center">
-                        <img src="https://picsum.photos/id/1061/300/300" class="card-img-top" alt="photo1">
+                    <div class="card h-100 text-center rounded-0 rounded-bottom border-light shadow">
+                        <img src="https://picsum.photos/id/1061/300/300" class="card-img-top rounded-0" alt="photo1">
                         <div class="card-body pt-0 px-0">
                         <h5 class="card-title text-white p-2" style="background-color: rgb(255, 193, 5);">EXPLORE THE SEA</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptas quae ea tempore id temporibus illo </p>
                         </div>
-                        <div class="card-footer pt-0">
+                        <div class="card-footer pt-0 bg-white">
                             <small class="text-body-secondary" style="color: rgb(255, 193, 5);">2 days - 2 destinations</small>
-                            <div class="d-flex justify-content-center pt-2">
-                                <p style="font-weight: bolder;">350&euro;</p>
-                                <p style="color: grey;">/person</p>
+                            <div class="d-flex justify-content-center pt-3 pb-3">
+                                <p style="font-weight: bolder;" class="mb-0">350&euro;</p>
+                                <p style="color: grey;" class="mb-0">/person</p>
                             </div>
                         </div>
                     </div>
@@ -49,17 +49,17 @@
 
 
                 <div class="col-lg-4">
-                    <div class="card h-100 text-center">
-                        <img src="https://picsum.photos/id/1061/300/300" class="card-img-top" alt="photo1">
+                    <div class="card h-100 text-center rounded-0 rounded-bottom border-light shadow">
+                        <img src="https://picsum.photos/id/15/300/300" class="card-img-top rounded-0" alt="photo1">
                         <div class="card-body pt-0 px-0">
-                        <h5 class="card-title text-white p-2" style="background-color: rgb(255, 193, 5);">EXPLORE THE SEA</h5>
+                        <h5 class="card-title text-white p-2" style="background-color: rgb(25,135,84);">HIKE IN THE FOREST</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptas quae ea tempore id temporibus illo </p>
                         </div>
-                        <div class="card-footer pt-0">
-                            <small class="text-body-secondary" style="color: rgb(255, 193, 5);">2 days - 2 destinations</small>
-                            <div class="d-flex justify-content-center pt-2">
-                                <p style="font-weight: bolder;">350&euro;</p>
-                                <p style="color: grey;">/person</p>
+                        <div class="card-footer pt-0 bg-white">
+                            <small class="text-body-secondary" style="color: rgb(25,135,84);">3 days - 2 destinations</small>
+                            <div class="d-flex justify-content-center pt-3 pb-3">
+                                <p style="font-weight: bolder;" class="mb-0">375&euro;</p>
+                                <p style="color: grey;" class="mb-0">/person</p>
                             </div>
                         </div>
                     </div>
@@ -67,17 +67,17 @@
 
 
                 <div class="col-lg-4">
-                    <div class="card h-100 text-center">
-                        <img src="https://picsum.photos/id/1061/300/300" class="card-img-top" alt="photo1">
+                    <div class="card h-100 text-center rounded-0 rounded-bottom border-light shadow">
+                        <img src="https://picsum.photos/id/1036/300/300" class="card-img-top rounded-0" alt="photo1">
                         <div class="card-body pt-0 px-0">
-                        <h5 class="card-title text-white p-2" style="background-color: rgb(255, 193, 5);">EXPLORE THE SEA</h5>
+                        <h5 class="card-title text-white p-2" style="background-color: rgb(12,202,240);">EXPLORE THE SEA</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptas quae ea tempore id temporibus illo </p>
                         </div>
-                        <div class="card-footer pt-0">
-                            <small class="text-body-secondary" style="color: rgb(255, 193, 5);">2 days - 2 destinations</small>
-                            <div class="d-flex justify-content-center pt-2">
-                                <p style="font-weight: bolder;">350&euro;</p>
-                                <p style="color: grey;">/person</p>
+                        <div class="card-footer pt-0 bg-white">
+                            <small class="text-body-secondary" style="color: rgb(12,202,240);">1 days - 1 destinations</small>
+                            <div class="d-flex justify-content-center pt-3 pb-3">
+                                <p style="font-weight: bolder;" class="mb-0">400&euro;</p>
+                                <p style="color: grey;" class="mb-0">/person</p>
                             </div>
                         </div>
                     </div>
